2010-07-15 John Wu <John dot Wu at ACM dot org>
	* tests/setqgen.cpp:151 compute ceiling of (krow/nrpd) instead of
	floor to ensure the left over rows are written into their own
	partition (not the previous data partition)
	* tests/Makefile.am: update check-sq1 to allow up to 200 Warnings
	(because of the small memory caches used to exercise the memory
	management functions)

2010-07-14 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp, src/mensa.cpp, src/filter.cpp: need to dismiss the
	scope guards after the buffers have been successfully transferred
	to the new table objects (otherwise the new table objects returned
	will contain invalid pointers)
	* src/part.h, src/part.cpp: add functions columnNames and
	columnTypes to output names and types in the order recorded in
	colorder as suggested by Jan Steemann
	* src/bord.cpp, src/mensa.cpp: redirect columnNames and
	columnTypes to use ibis::part::columnNames and
	ibis::part::column::columnTypes
	* tests/setqgen.cpp: accept the fourth arguement as the name of a
	configuration file (to control how much memory to use in test case
	check-sq1 and therefore how long make more-check will run)

2010-07-13 John Wu <John dot Wu at ACM dot org>
	* src/table.h: change typeList and stringList to use array_t
	instead of std::vector
	* src/bord.h: change bufferList to use array_t instead of
	std::vector, move bufferList to table.h, also moves functions
	allocateBuffer, freeBuffer and freeBuffers to table.h
	* src/array_t.cpp: add more print statement to debug memory issue
	(surround them with conditional compilation macro DEBUG)
	* src/array_t.cpp: change the raw pointer in function nosharing to
	auto_ptr
	* src/mensa.cpp, src/filter.cpp: delay the creation of scope
	guards till after the bufferLists take on their final sizes (the
	constructor of the scope guards took the parameters as they were
	declared and are not aware of the changs made later) (this should
	solve the remaining problem with memory leaks reported by Jan