@@ -405,7 +405,7 @@ void ibis::sbiad::construct2(const char* f, const uint32_t nbase) {
 	std::string mname(fnm);
 	mname += ".msk";
 	if (ibis::fileManager::instance().getFile(mname.c_str(), arr) == 0)
-	    mask.copy(arr); // convert arr to a bitvector
+	    mask.copy(ibis::bitvector(arr)); // convert arr to a bitvector
 	else
 	    mask.set(1, nrows); // default mask
     }
